[package]
name = "json-keypath-iter"
version = "0.1.0"
authors = ["iferc <github@iferc.ca>"]
edition = "2018"
description = """
Iterator for traversing serde json objects, yielding a flattened path and value of each element.
"""
repository = "https://github.com/iferc/json-keypath-iter"
keywords = ["json", "field", "path", "flat", "iterator"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "~1.0"
